Accessibility Changes on Colors
Changes on site colors to adequate more on WCAG requirements for contrast.

--- a/index.html
+++ b/index.html
@@ -407,8 +407,8 @@
             </div>
             <div class="depoimento-autor">
               <div class="autor-info">
-                <h4>Sergio Oliveira</h4>
-                <p>Executivo de TI, Crefisa</p>
+                <h3>Sergio Oliveira</h3>
+                <h4>Executivo de TI, Crefisa</h4>
               </div>
             </div>
           </div>
@@ -424,8 +424,8 @@
             </div>
             <div class="depoimento-autor">
               <div class="autor-info">
-                <h4>Julio Cesar Nietto</h4>
-                <p>Coordenador de QA, Riachuelo</p>
+                <h3>Julio Cesar Nietto</h3>
+                <h4>Coordenador de QA, Riachuelo</h4>
               </div>
             </div>
           </div>
