Better alt text on images

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <!-- Seção Sobre Mim -->
     <section id="sobre" class="secao">
       <div class="container">
-        <h2 data-aos="fade-up">Sobre Mim</h2>
+        <h1 data-aos="fade-up">Sobre Mim</h1>
         <div class="sobre-conteudo" data-aos="fade-up" data-aos-delay="100">
           <div class="foto-perfil">
             <img src="assets/images/profile.jpeg" alt="Sua Foto" />
@@ -289,7 +289,7 @@
           </div>
           <div class="projeto-card">
             <div class="projeto-imagem">
-              <img src="assets/images/projeto2.jpg" alt="Projeto 2" />
+              <img src="assets/images/projeto2.jpg" alt="Design e Prototipo que fiz no Figma" />
             </div>
             <div class="projeto-info">
               <h3>Design e Prototipagem</h3>
@@ -306,7 +306,7 @@
           </div>
           <div class="projeto-card">
             <div class="projeto-imagem">
-              <img src="assets/images/projeto3.jpg" alt="Projeto 3" />
+              <img src="assets/images/projeto3.jpg" alt="Hell Clock Builder" />
             </div>
             <div class="projeto-info">
               <h3>Hell Clock Builder</h3>
@@ -348,7 +348,7 @@
             </ul>
           </div>
           <div class="ux-ui-imagem">
-            <img src="assets/images/ux-ui.jpg" alt="UX/UI Design" />
+            <img src="assets/images/ux-ui.jpg" alt="A design I made on Figma for a Site." />
           </div>
         </div>
       </div>
@@ -359,7 +359,7 @@
         <h2 data-aos="fade-up">Paixão por Jogos</h2>
         <div class="jogos-content" data-aos="fade-up" data-aos-delay="100">
           <div class="jogos-imagem">
-            <img src="assets/images/gaming.jpg" alt="Gaming" />
+            <img src="assets/images/gaming.jpg" alt="A photo of me at Gamescom with a statue of Sonic" />
           </div>
           <div class="jogos-texto">
             <p>
