Adição de themes para o site
Adição de theme-styles.css e themes.js

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     />
     <!-- AOS - Animate On Scroll -->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <link rel="stylesheet" href="assets/css/theme-styles.css" />
+    <script src="assets/js/themes.js"></script>
   </head>
   <body>
     <!-- Cabeçalho -->
