--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
             <div class="terminal-button minimize"></div>
             <div class="terminal-button maximize"></div>
           </div>
-          <div class="terminal-title">vladmir_prates.exe</div>
+          <div class="terminal-title">vladmir_prates.sh</div>
         </div>
         <div class="terminal-content" id="terminal-content">
           <div class="terminal-line">
