--- a/main.html
+++ b/main.html
@@ -61,8 +61,8 @@
               <li><a href="#ux-ui" data-i18n="nav.uxui">UX/UI</a></li>
               <li><a href="#jogos" data-i18n="nav.jogos">Jogos</a></li>
               <li>
-                <a href="#depoimentos" data-i18n="nav.depoimentos"
-                  >Depoimentos</a
+                <a href="#recomendacoes" data-i18n="nav.recomendacoes"
+                  >Recomendações</a
                 >
               </li>
               <li><a href="#contato" data-i18n="nav.contato">Contato</a></li>
@@ -430,13 +430,13 @@
         </div>
       </div>
     </section>
-    <!-- Seção de Depoimentos -->
-    <section id="depoimentos" class="secao">
+    <!-- Seção de recomendacoes -->
+    <section id="recomendacoes" class="secao">
       <div class="container">
         <h2 data-aos="fade-up">O que Dizem Sobre Mim</h2>
-        <div class="depoimentos-slider" data-aos="fade-up" data-aos-delay="100">
-          <div class="depoimento">
-            <div class="depoimento-texto">
+        <div class="recomendacoes-slider" data-aos="fade-up" data-aos-delay="100">
+          <div class="recomendacao">
+            <div class="recomendacao-texto">
               <p>
                 "Vladmir tem clareza de visão e suas opiniões são sempre muito
                 assertivas. Sua participação nos projetos ajuda a descobrir
@@ -448,15 +448,15 @@
                 mercado."
               </p>
             </div>
-            <div class="depoimento-autor">
+            <div class="recomendacao-autor">
               <div class="autor-info">
                 <h3>Sergio Oliveira</h3>
                 <h4>Executivo de TI, Crefisa</h4>
               </div>
             </div>
           </div>
-          <div class="depoimento">
-            <div class="depoimento-texto">
+          <div class="recomendacao">
+            <div class="recomendacao-texto">
               <p>
                 "Profissional que sabe se relacionar bem com a equipe, pontuando
                 os problemas e desafios a serem vencidos. Um ótimo analista de
@@ -465,7 +465,7 @@
                 papel de Testes Funcionais. Recomendo Vladmir Prates."
               </p>
             </div>
-            <div class="depoimento-autor">
+            <div class="recomendacao-autor">
               <div class="autor-info">
                 <h3>Julio Cesar Nietto</h3>
                 <h4>Coordenador de QA, Riachuelo</h4>
