Ajustes na responsividade

--- a/main.html
+++ b/main.html
@@ -68,6 +68,7 @@
               <li><a href="#contato" data-i18n="nav.contato">Contato</a></li>
             </ul>
           </nav>
+          <div class="header-selectors"></div>
         </div>
       </div>
     </header>
