--- a/main.html
+++ b/main.html
@@ -81,9 +81,7 @@
             <h2 data-i18n="hero.titulo">
               Software Quality Assurance & Games Enthusiast
             </h2>
-            <p data-i18n="hero.subtitulo">
-              Transformando ideias em experiências de qualidade
-            </p>
+            <p data-i18n="hero.subtitulo">Transformando ideias em experiências de qualidade</p>
           </div>
           <div class="hero-buttons">
             <a href="#projetos" class="botao-primario">
@@ -106,26 +104,26 @@
     <!-- Seção Sobre Mim -->
     <section id="sobre" class="secao">
       <div class="container">
-        <h2 data-aos="fade-up">Sobre Mim</h2>
+        <h2 data-aos="fade-up" data-i18n="sobre.titulo">Sobre Mim</h2>
         <div class="sobre-conteudo" data-aos="fade-up" data-aos-delay="100">
           <div class="foto-perfil">
             <img src="assets/images/profile.jpeg" alt="Sua Foto" />
           </div>
           <div class="bio">
-            <p>
+            <p data-i18n="sobre.paragrafo1">
               Olá! Sou um profissional de Quality Assurance apaixonado por
               garantir a melhor experiência possível aos usuários. Com
               experiência em testes manuais e automatizados, trabalho para
               assegurar que cada produto atenda aos mais altos padrões de
               qualidade.
             </p>
-            <p>
+            <p data-i18n="sobre.paragrafo2">
               Tenho grande interesse em UX/UI, sempre buscando entender como os
               usuários interagem com os produtos para aprimorar a qualidade dos
               testes e contribuir para uma experiência mais intuitiva e
               eficiente.
             </p>
-            <p>
+            <p data-i18n="sobre.paragrafo3">
               Sou também um amante de jogos, o que me ajuda a entender melhor a
               importância da experiência do usuário e da qualidade em produtos
               interativos.
@@ -133,15 +131,15 @@
             <div class="sobre-detalhes">
               <div class="detalhe-item">
                 <i class="fas fa-briefcase"></i>
-                <span>4 anos de experiência em QA</span>
+                <span data-i18n="sobre.experiencia">4 anos de experiência em QA</span>
               </div>
               <div class="detalhe-item">
                 <i class="fas fa-graduation-cap"></i>
-                <span>Análise e Desenvolvimento de Sistemas</span>
+                <span data-i18n="sobre.formacao">Análise e Desenvolvimento de Sistemas</span>
               </div>
               <div class="detalhe-item">
                 <i class="fas fa-map-marker-alt"></i>
-                <span>São Paulo</span>
+                <span data-i18n="sobre.localizacao">São Paulo</span>
               </div>
             </div>
           </div>
@@ -151,21 +149,21 @@
     <!-- Seção de Experiência -->
     <section id="experiencia" class="secao secao-alternada">
       <div class="container">
-        <h2 data-aos="fade-up">Experiência Profissional</h2>
+        <h2 data-aos="fade-up" data-i18n="experiencia.titulo">Experiência Profissional</h2>
         <div class="timeline" data-aos="fade-up" data-aos-delay="100">
           <div class="experiencia-item">
-            <div class="periodo">2024 - Presente</div>
+            <div class="periodo" data-i18n="experiencia.periodo1">2024 - Presente</div>
             <div class="detalhes">
-              <h3>QA Pleno</h3>
-              <p class="empresa">GFT Technologies</p>
+              <h3 data-i18n="experiencia.cargo1">QA Pleno</h3>
+              <p class="empresa" data-i18n="experiencia.empresa1">GFT Technologies</p>
               <ul>
-                <li>Implementação e execução de testes automatizados</li>
-                <li>
+                <li data-i18n="experiencia.descricao1_1">Implementação e execução de testes automatizados</li>
+                <li data-i18n="experiencia.descricao1_2">
                   Desenvolvimento de estratégias e execuções de teste para
                   Salesforce
                 </li>
-                <li>Colaboração com equipes de desenvolvimento e Negócios</li>
-                <li>Identificação e documentação de bugs e melhorias</li>
+                <li data-i18n="experiencia.descricao1_3">Colaboração com equipes de desenvolvimento e Negócios</li>
+                <li data-i18n="experiencia.descricao1_4">Identificação e documentação de bugs e melhorias</li>
               </ul>
             </div>
           </div>
@@ -434,11 +432,11 @@
     <!-- Seção de recomendacoes -->
     <section id="recomendacoes" class="secao">
       <div class="container">
-        <h2 data-aos="fade-up">O que Dizem Sobre Mim</h2>
+        <h2 data-aos="fade-up" data-i18n="recomendacoes.titulo">O que Dizem Sobre Mim</h2>
         <div class="recomendacoes-slider" data-aos="fade-up" data-aos-delay="100">
           <div class="recomendacao">
             <div class="recomendacao-texto">
-              <p>
+              <p data-i18n="recomendacoes.recomendacao1_texto">
                 "Vladmir tem clareza de visão e suas opiniões são sempre muito
                 assertivas. Sua participação nos projetos ajuda a descobrir
                 antecipadamente situacoes não previstas e discutidas, evitando
@@ -451,14 +449,14 @@
             </div>
             <div class="recomendacao-autor">
               <div class="autor-info">
-                <h3>Sergio Oliveira</h3>
-                <h4>Executivo de TI, Crefisa</h4>
+                <h3 data-i18n="recomendacoes.recomendacao1_nome">Sergio Oliveira</h3>
+                <h4 data-i18n="recomendacoes.recomendacao1_cargo">Executivo de TI, Crefisa</h4>
               </div>
             </div>
           </div>
           <div class="recomendacao">
             <div class="recomendacao-texto">
-              <p>
+              <p data-i18n="recomendacoes.recomendacao2_texto">
                 "Profissional que sabe se relacionar bem com a equipe, pontuando
                 os problemas e desafios a serem vencidos. Um ótimo analista de
                 QA com muito potencial de desenvolvimento. Sabe investigar,
@@ -468,8 +466,8 @@
             </div>
             <div class="recomendacao-autor">
               <div class="autor-info">
-                <h3>Julio Cesar Nietto</h3>
-                <h4>Coordenador de QA, Riachuelo</h4>
+                <h3 data-i18n="recomendacoes.recomendacao2_nome">Julio Cesar Nietto</h3>
+                <h4 data-i18n="recomendacoes.recomendacao2_cargo">Coordenador de QA, Riachuelo</h4>
               </div>
             </div>
           </div>
@@ -479,7 +477,7 @@
     <!-- Seção de Contato -->
     <section id="contato" class="secao secao-alternada">
       <div class="container">
-        <h2 data-aos="fade-up">Entre em Contato</h2>
+        <h2 data-aos="fade-up" data-i18n="contato.titulo">Entre em Contato</h2>
         <div class="contato-container" data-aos="fade-up" data-aos-delay="100">
           <div class="contato-info-expanded">
             <h3>Informações de Contato</h3>
@@ -597,5 +595,12 @@
         }, 300);
       });
     </script>
+    <script>
+  document.addEventListener("DOMContentLoaded", () => {
+    console.log("DOM fully loaded. List items:", 
+      document.querySelectorAll('[data-i18n^="experiencia.descricao"]').length
+    );
+  });
+</script>
   </body>
 </html>
